# bloqade-circuit

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/bloqade/qrb/: __init__.py  base.py  device.py  native.py  reg.py  target.py  task.py
src/bloqade/qrb/noise/: native.py
src/bloqade/qrb/qasm2/: core.py  glob.py  parallel.py  uop.py
src/bloqade/qrb/squin/: qubit.py
src/bloqade/qrb/squin/gate/: __init__.py  gate.py
src/bloqade/qrb/squin/noise/: __init__.py  native.py
test/qrb/: test_target.py
test/qrb/runtime/: test_dyn_memory.py  test_qrb.py
test/qrb/runtime/noise/qasm2/: test_loss.py  test_pauli.py
test/qrb/squin/: test_kernel.py  test_noise.py
